MonetDB5/tests/BugReports/Tests/no.166.mal
# Monet Mil to Mal compiler
# Copyright (c) 2001-2004, CWI. All rights reserved.

# Predefined code segment
#The compiler can not guarantee an accurate compilation,
#because MIL unlike MAL is a dynamically typed language.
#A few guidelines to maximize usefullness.
#- make the type of variables explicit, in particular 'nil'
#- upon advice of M2m to remap identifiers, change it in your program directly
#
	aa_a := oid(20000000);
	ba_a := setoid(aa_a);
#
	ca_a := loaded();
#{
	da_a := printf("\nloading '%s' ... ","enum");
!ERROR: "module("enum");"
!               ^
! syntax error, unexpected TOK_MODULE.
